--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/abi/abi.json
+    - assets/abi/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
