--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   web3: ^1.0.5
   web3dart: ^2.6.1
   http: ^0.13.5
+  external_app_launcher: ^3.1.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
